--- a/try_push.html
+++ b/try_push.html
@@ -1,1 +1,11 @@
- hiii push command
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    hiii push command i edit it in vs nowww lol
+  </body>
+</html>
